--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,5 +48,7 @@ jobs:
         run: |
           docker run -d \
             --name clinic-flow \
-            -p 8080:80 \
+            -p 8080:443 \
+            -v /etc/nginx/cert/workflows.aphelionxinnovations.com.cert:/etc/nginx/ssl/server.crt:ro
+            -v /etc/nginx/cert/workflows.aphelionxinnovations.com.key:/etc/nginx/ssl/server.key:ro
             clinic-flow:${{ env.VERSION }}
