Update nginx config for proxy

--- a/default.conf
+++ b/default.conf
@@ -13,4 +13,9 @@ server {
   location / {
     try_files $uri $uri/ /index.html;
   }
+  # proxy config
+  location /api/ {
+    proxy_pass https://workflows.aphelionxinnovations.com/webhook/;
+    proxy_set_header Host $host;
+  }
 }
