Adding Profile, Patients pages with guard and role management

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -20,6 +20,12 @@
             }
         },
         {
+            "files": ["*.css", "*.scss"],
+            "options": {
+                "parser": "scss"
+            }
+        },
+        {
             "files": ["*.component.html"],
             "options": {
                 "parser": "angular"
