--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "@primeng/themes": "^19.0.5",
+    "@zxing/ngx-scanner": "^19.0.0",
     "chart.js": "4.4.2",
     "primeclt": "^0.1.5",
     "primeicons": "^7.0.0",
